--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:11.0.2'
     implementation 'com.google.firebase:firebase-auth:11.0.2'
 
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.volley:volley:1.1.1'
+
 }
